# SW

./: .clang-format  .gitignore  README.md
PROJECT1/: CMakeLists.txt  README.md
PROJECT1/documentation/: Doxyfile
PROJECT1/documentation/html/: Audit_8cpp.html  Audit_8cpp__incl.dot  Audit_8h.html  Audit_8h__dep__incl.dot  Audit_8h__incl.dot  Audit_8h_source.html  CPL_8cpp.html  CPL_8cpp__incl.dot  CPL_8h.html  CPL_8h__dep__incl.dot  CPL_8h__incl.dot  CPL_8h_source.html  Candidate_8cpp.html  Candidate_8cpp__incl.dot  Candidate_8h.html  Candidate_8h__dep__incl.dot  Candidate_8h__incl.dot  Candidate_8h_source.html  Display_8cpp.html  Display_8cpp__incl.dot  Display_8h.html  Display_8h__dep__incl.dot  Display_8h__incl.dot  Display_8h_source.html  ElectionContext_8cpp.html  ElectionContext_8cpp__incl.dot  ElectionContext_8h.html  ElectionContext_8h__dep__incl.dot  ElectionContext_8h__incl.dot  ElectionContext_8h_source.html  ElectionResults_8cpp.html  ElectionResults_8cpp__incl.dot  ElectionResults_8h.html  ElectionResults_8h__dep__incl.dot  ElectionResults_8h__incl.dot  ElectionResults_8h_source.html  Election_8cpp.html  Election_8cpp__incl.dot  Election_8h.html  Election_8h__dep__incl.dot  (+181 more)
